# ai-ideas

./: .gitignore  CLAUDE.md  PROPOSED_STRUCTURE.md  README.md  ai-product-ideas.md  check-server-config.sh  claude-code-notion-guide.md  gmail_bulk_cleanup.py  gmail_organizer.py  gmail_progress.json  gmail_to_archive.json  start-all-services.sh  stop-all-services.sh
.claude/skills/: organize-knowledge-graph.md  review
apps/.claude/: settings.local.json
apps/ChromeBookMark/: bookmarks_2026_1_6.html  bookmarks_final.html  bookmarks_organized.html  (+1 more)
apps/newRedResearch/: .env.example  .gitignore  pyproject.toml
apps/newRedResearch/.claude/: settings.local.json
apps/teamventure/src/backend/python-ai-service/: .dockerignore  .env.example  Dockerfile  QUICK_START_TOKEN_SAVING.md  pyproject.toml
apps/teamventure/src/backend/python-ai-service/docs/: AI_TOKEN_OPTIMIZATION.md
apps/teamventure/src/backend/python-ai-service/scripts/: test_token_optimization.sh
apps/teamventure/src/backend/python-ai-service/src/: __init__.py  main.py
apps/teamventure/src/backend/python-ai-service/src/integrations/: __init__.py  amap_client.py  java_client.py  openai_client.py
apps/teamventure/src/backend/python-ai-service/src/langgraph/: state.py  workflow.py
apps/teamventure/src/backend/python-ai-service/src/models/: config.py  idea.py
apps/teamventure/src/backend/python-ai-service/src/scheduler/: __init__.py  jobs.py  scheduler.py
apps/teamventure/src/backend/python-ai-service/src/services/: __init__.py  feishu_publisher.py  id_generator.py  idea_generator.py  idea_storage.py  itinerary_markdown_enforcer.py  itinerary_markdown_v2.py  markdown_converter.py  markdown_optimizer.py  mq_consumer.py  notion_publisher.py  plan_generation.py  requirement_parser.py  supplier_matcher.py  xhs_normalizer.py
apps/teamventure/src/backend/python-ai-service/src/utils/: __init__.py  llm_metrics.py  ttl_cache.py
apps/teamventure/src/backend/python-ai-service/tests/scheduler/: __init__.py  test_idea_generator.py
apps/teamventure/src/backend/python-ai-service/tests/services/: test_itinerary_markdown_enforcer_fallback.py  test_itinerary_markdown_v2_loose_day_heading.py  test_markdown_converter_date_split.py  test_markdown_converter_format.py  test_markdown_converter_suzhou_sample.py  test_markdown_optimizer_guardrail.py  test_plan_generation_poi_guardrail.py
apps/xiaohongshu-research-podcast/: .env.example  .gitignore  ARCHITECTURE.md  FILE_MANIFEST.md  FINAL_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  pyproject.toml  test_report_generator.py
apps/xiaohongshu-research-podcast/config/: scraper.yaml  voice.yaml
apps/xiaohongshu-research-podcast/docs/: DEPLOYMENT.md  QUICK_START_REPORT.md  REPORT_GENERATOR.md
apps/xiaohongshu-research-podcast/examples/: generate_complete_report.py
apps/xiaohongshu-research-podcast/output/: example-report-2026-01-15.md
apps/xiaohongshu-research-podcast/scripts/: com.xiaohongshu-research-podcast.plist  daily_generate.py  run_daily.sh  verify_installation.py
apps/xiaohongshu-research-podcast/src/analyzers/: __init__.py  insight_generator.py  topic_analyzer.py  trend_analyzer.py
apps/xiaohongshu-research-podcast/src/generators/: __init__.py  audio_mixer.py  cover_generator.py  report_generator.py
apps/xiaohongshu-research-podcast/src/models/: __init__.py  topic.py
apps/xiaohongshu-research-podcast/src/processors/: __init__.py  dialogue_writer.py  dialogue_writer_old.py
apps/xiaohongshu-research-podcast/src/scrapers/: __init__.py  browser_manager.py  newrank_scraper.py
apps/xiaohongshu-research-podcast/src/utils/: __init__.py  cache_manager.py  logger.py
apps/xiaohongshu-scraper/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/xiaohongshu-scraper/docs/: research-report.md  url-parser-test-report.md
apps/xiaohongshu-scraper/scripts/: connect_chrome.py  start_chrome_debug.sh
apps/xiaohongshu-scraper/src/: __init__.py  main.py
apps/xiaohongshu-scraper/src/core/: __init__.py  browser.py  scraper.py
apps/xiaohongshu-scraper/src/models/: __init__.py  schemas.py
apps/xiaohongshu-scraper/src/utils/: __init__.py  parser.py
apps/xiaohongshu-scraper/tests/: generate_report.py  test_url_parser.py
apps/xiaohongshu-scraper/tests/results/: url_parser_cases_20260105_214417.json  url_parser_cases_20260105_214444.json  url_parser_cases_20260105_214521.json  url_parser_cases_20260105_214614.json  url_parser_stats_20260105_214417.json  url_parser_stats_20260105_214444.json  url_parser_stats_20260105_214521.json  url_parser_stats_20260105_214614.json
apps/zhimeng-agent/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/zhimeng-agent/config/: .env.example  settings.py
apps/zhimeng-agent/scripts/: start.sh
apps/zhimeng-agent/src/: __init__.py  feishu_bot.py  feishu_ws.py  indexer.py  llm_client.py  main.py  retriever.py  smart_agent.py  travel_tools.py
apps/zhimeng-agent/tasks/: config.py  sync_utils.py
apps/zhimeng-agent/tasks/daily_report/: main.py
apps/zhimeng-agent/tasks/desktop_organizer/: main.py
apps/zhimeng-agent/tasks/email_organizer/: main.py
apps/zhimeng-agent/tasks/launchd/: README.md  com.zhimeng.daily-report.plist  com.zhimeng.desktop-organizer.plist  com.zhimeng.email-organizer.plist  com.zhimeng.teamventure-health.plist  com.zhimeng.tech-news.plist  install.sh
apps/zhimeng-agent/tasks/teamventure_health/: __init__.py  main.py
apps/zhimeng-agent/tasks/tech_news/: main.py
apps/zhimeng-agent/tests/: test_retriever.py
docs/: architecture-analysis.md  ssh-jump-host-config.md  teamventure-market-research.md
educational-products/: README.md
prds/: ego-echo-business-plan.md  ego-echo-workplace-recovery-prd.md
scripts/: check-tomo-server.sh  check_downloads.sh  deploy-to-tomo.sh  downloads_status.txt  generate-daily-token-report.py  manual-deploy-steps.sh  organize_downloads.sh  organize_downloads_v3.sh  organize_downloads_v4.sh  quick-deploy.sh  sync_to_feishu.py
templates/: business-plan-template.md
(+544 files in other folders)
