[tool.poetry]
name = "teamventure-ai-service"
version = "1.0.0"
description = "TeamVenture AI Service - 团建方案智能生成服务"
authors = ["TeamVenture Team <team@teamventure.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"

# LangChain & LangGraph
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
langgraph = "^0.0.40"

# Database & Cache
redis = "^5.0.1"
aioredis = "^2.0.1"

# Message Queue
aio-pika = "^9.3.1"

# HTTP Client
httpx = "^0.26.0"
aiohttp = "^3.9.1"

# Utilities
python-dotenv = "^1.0.0"
python-json-logger = "^2.0.7"
ulid-py = "^1.1.0"
prometheus-fastapi-instrumentator = "^6.1.0"

# Scheduler & Git
apscheduler = "^3.10.4"
gitpython = "^3.1.40"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^23.12.1"
ruff = "^0.1.9"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
